clusters/casa/apps/image-updates/k8s/route.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: image-updates
  namespace: monitoring
spec:
  parentRefs:
    - name: homelab
      namespace: traefik
  hostnames:
    - wud.biplane.casa
  rules:
    - backendRefs:
        - name: wud
          port: 80
          filters:
            - type: ExtensionRef
              extensionRef:
                group: traefik.io
                kind: Middleware
                name: oauth2-proxy
            - type: ExtensionRef
              extensionRef:
                group: traefik.io
                kind: Middleware
                name: secure-headers
            - type: ExtensionRef
              extensionRef:
                group: traefik.io
                kind: Middleware
                name: ratelimit-default
